tests/NormalTests/paczka1/small_fuzzy/73276488.err
Error in line 6: cafNLl A839 26,4
Error in line 8: cafNLl S417 46,8
Error in line 9: cafNLl S43 31,3
